# Space_spectator

./: .gitignore  README.md  docker-compose.yml
db/: init.sql
services/pascal-legacy/: Dockerfile  csv2xlsx.py  legacy.pas  run.sh
services/php-web/: Dockerfile  entrypoint.sh  nginx.conf
services/php-web/laravel-patches/app/Http/Controllers/: AstroController.php  CmsController.php  DashboardController.php  OsdrController.php  ProxyController.php  TelemetryController.php
services/php-web/laravel-patches/app/Http/Middleware/: RateLimitMiddleware.php  VerifyCsrfToken.php
services/php-web/laravel-patches/app/Http/Validators/: AstroDataValidator.php  IssDataValidator.php  JwstDataValidator.php  OsdrDataValidator.php
services/php-web/laravel-patches/app/Support/: JwstHelper.php
services/php-web/laravel-patches/database/migrations/: 2025_11_03_193635_dummy_training_marker.php
services/php-web/laravel-patches/resources/views/: dashboard.blade.php  osdr.blade.php
services/php-web/laravel-patches/resources/views/cms/: page.blade.php
services/php-web/laravel-patches/resources/views/layouts/: app.blade.php
services/php-web/laravel-patches/resources/views/telemetry/: csv-list.blade.php  csv-view.blade.php  index.blade.php
services/php-web/laravel-patches/routes/: web.php
services/rust-iss/: Cargo.toml  Dockerfile
services/rust-iss/src/: main.rs
